Closes #3647 - Dropdown alignment fix on Compound field

--- a/src/components/dropdown/_dropdown.scss
+++ b/src/components/dropdown/_dropdown.scss
@@ -770,6 +770,7 @@ input.dropdown.error:focus {
 .compound-field {
   .dropdown-wrapper {
     margin-top: 0;
+    margin-bottom: 5px;
   }
 
   div.dropdown,
